--- a/InventoryService.WebUIDeployment/packages.config
+++ b/InventoryService.WebUIDeployment/packages.config
@@ -4,6 +4,9 @@
   <package id="Akka.Cluster" version="1.1.2" targetFramework="net452" />
   <package id="Akka.Logger.NLog" version="1.1.2" targetFramework="net452" />
   <package id="Akka.Remote" version="1.1.2" targetFramework="net452" />
+  <package id="Autofac" version="4.2.0" targetFramework="net452" />
+  <package id="Autofac.Owin" version="4.0.0" targetFramework="net452" />
+  <package id="Autofac.SignalR" version="3.0.2" targetFramework="net452" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
   <package id="Helios" version="2.1.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
