--- a/InventoryService.WebUIHost/packages.config
+++ b/InventoryService.WebUIHost/packages.config
@@ -3,6 +3,8 @@
   <package id="Akka" version="1.1.2" targetFramework="net452" />
   <package id="Akka.Cluster" version="1.1.2" targetFramework="net452" />
   <package id="Akka.Remote" version="1.1.2" targetFramework="net452" />
+  <package id="Autofac" version="4.2.0" targetFramework="net452" />
+  <package id="Autofac.SignalR" version="3.0.2" targetFramework="net452" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
   <package id="Helios" version="2.1.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.1" targetFramework="net452" />
