optimizing inventory actor throuput

--- a/InventoryService.WebUIDeployment/App.config
+++ b/InventoryService.WebUIDeployment/App.config
@@ -9,7 +9,7 @@
     <add key="ServerEndPoint" value="http://*:10080/" />
     <add key="EsentStoragePath" value="../" />
     <add key="ServerActorSystemName" value="InventoryServiceUI-Server" />
-    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@occvm1.eastus.cloudapp.azure.com:10000/user/InventoryActor/NotificationsActor" />
+    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor/NotificationsActor" />
   </appSettings>
   <connectionStrings>
   </connectionStrings>
