--- a/InventoryService/InventoryService.csproj
+++ b/InventoryService/InventoryService.csproj
@@ -61,6 +61,7 @@
     <Compile Include="OperationResult.cs" />
     <Compile Include="ProductInventoryOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RealTimeInventoryFinalResult.cs" />
     <Compile Include="RealTimeInventoryOPerationalResultExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
