--- a/InventoryService.ServiceClientDeployment/App.config
+++ b/InventoryService.ServiceClientDeployment/App.config
@@ -5,12 +5,15 @@
   </configSections>
   <appSettings>
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
-    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor/NotificationsActor" />
+    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
   </appSettings>
   <akka>
     <hocon>
       <![CDATA[
 akka {
+ #stdout-loglevel = DEBUG
+    loglevel = DEBUG
+    log-config-on-start = on
     actor {
 
         provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
@@ -25,6 +28,9 @@ akka {
     }
 
     remote {
+     log-remote-lifecycle-events = DEBUG
+              log-received-messages = on
+              log-sent-messages = on
                 helios.tcp {
                     port = 0
                     hostname = localhost
