--- a/InventoryService.ServiceDeployment/App.config
+++ b/InventoryService.ServiceDeployment/App.config
@@ -16,6 +16,9 @@
   <akka>
     <hocon>
       <![CDATA[
+         GetAllInventoryListMailbox {
+    mailbox-type : "InventoryService.ActorMailBoxes.GetAllInventoryListMailbox, InventoryService.ActorMailBoxes"
+}
 akka {
 
     #stdout-loglevel = DEBUG
