--- a/InventoryService.WebUIDeployment/App.config
+++ b/InventoryService.WebUIDeployment/App.config
@@ -16,6 +16,10 @@
   <akka>
     <hocon>
       <![CDATA[
+      
+      GetAllInventoryListMailbox {
+    mailbox-type : "InventoryService.ActorMailBoxes.GetAllInventoryListMailbox, InventoryService.ActorMailBoxes"
+}
 akka {
     stdout-loglevel = DEBUG
     loglevel = DEBUG
