replace connection management with Termination handlers

--- a/InventoryService.Actors/InventoryService.Actors.csproj
+++ b/InventoryService.Actors/InventoryService.Actors.csproj
@@ -86,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InventoryActor.cs" />
+    <Compile Include="InventoryServicePingActor.cs" />
     <Compile Include="Messages\FlushStreamsMessage.cs" />
     <Compile Include="Messages\LoadedInventoryMessage.cs" />
     <Compile Include="Messages\WriteInventoryMessage.cs" />
