--- a/InventoryService.Server/App.config
+++ b/InventoryService.Server/App.config
@@ -9,7 +9,7 @@
     <add key="ServerEndPoint" value="http://*:10080/" />
     <add key="EsentStoragePath" value="../" />
     <add key="ServerActorSystemName" value="InventoryService-Server" />
-    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
+    <add key="RemoteInventoryActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
