--- a/InventoryService.Tests/app.config
+++ b/InventoryService.Tests/app.config
@@ -5,7 +5,7 @@
   </configSections>
   <appSettings>
     <add key="Storage" value="InventoryService.Storage.InMemoryLib.InMemory, InventoryService.Storage.InMemoryLib" />
-    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
+    <add key="RemoteInventoryActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
     <!--<add key="ServerEndPoint" value="http://*:10086/" />-->
     <add key="ServerActorSystemName" value="InventoryService-Server" />
   </appSettings>
