--- a/InventoryService.Console/App.config
+++ b/InventoryService.Console/App.config
@@ -5,8 +5,8 @@
   </configSections>
   <appSettings>
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
-    <!--<add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:8099/user/InventoryActor" />-->
-    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@occvm1.eastus.cloudapp.azure.com:10000/user/InventoryActor" />
+    <!--<add key="RemoteInventoryActorAddress" value="akka.tcp://InventoryService-Server@localhost:8099/user/InventoryActor" />-->
+    <add key="RemoteInventoryActorAddress" value="akka.tcp://InventoryService-Server@occvm1.eastus.cloudapp.azure.com:10000/user/InventoryActor" />
   </appSettings>
   <akka>
     <hocon>
