--- a/InventoryService.ServiceDeployment/App.config
+++ b/InventoryService.ServiceDeployment/App.config
@@ -9,7 +9,7 @@
     <add key="ServerEndPoint" value="http://*:10080/" />
     <add key="EsentStoragePath" value="../" />
     <add key="ServerActorSystemName" value="InventoryService-Server" />
-    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
+    <add key="RemoteInventoryActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
   </appSettings>
   <connectionStrings>
   </connectionStrings>
@@ -20,12 +20,11 @@
     mailbox-type : "InventoryService.ActorMailBoxes.GetAllInventoryListMailbox, InventoryService.ActorMailBoxes"
 }
 akka {
-
     #stdout-loglevel = DEBUG
     loglevel = DEBUG
     log-config-on-start = on
     actor {
-
+        loggers = ["Akka.Logger.NLog.NLogLogger, Akka.Logger.NLog"]
         provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
 
         debug {
@@ -36,7 +35,6 @@ akka {
             unhandled = on
         }
     }
-
     remote {
               log-remote-lifecycle-events = DEBUG
               log-received-messages = on
