--- a/InventoryService.ServiceClientDeployment/App.config
+++ b/InventoryService.ServiceClientDeployment/App.config
@@ -5,7 +5,7 @@
   </configSections>
   <appSettings>
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
-    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
+    <add key="RemoteInventoryActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
   </appSettings>
   <akka>
     <hocon>
@@ -15,7 +15,7 @@ akka {
     loglevel = DEBUG
     log-config-on-start = on
     actor {
-
+        loggers = ["Akka.Logger.NLog.NLogLogger, Akka.Logger.NLog"]
         provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
 
         debug {
