--- a/InventoryService.WebUIDeployment/App.config
+++ b/InventoryService.WebUIDeployment/App.config
@@ -9,7 +9,7 @@
     <add key="ServerEndPoint" value="http://*:10080/" />
     <add key="EsentStoragePath" value="../" />
     <add key="ServerActorSystemName" value="InventoryServiceUI-Server" />
-    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor/NotificationsActor" />
+    <add key="RemoteInventoryActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor/NotificationsActor" />
   </appSettings>
   <connectionStrings>
   </connectionStrings>
@@ -21,22 +21,21 @@
     mailbox-type : "InventoryService.ActorMailBoxes.GetAllInventoryListMailbox, InventoryService.ActorMailBoxes"
 }
 akka {
-    stdout-loglevel = DEBUG
+     #stdout-loglevel = DEBUG
     loglevel = DEBUG
     log-config-on-start = on
     actor {
-
+        loggers = ["Akka.Logger.NLog.NLogLogger, Akka.Logger.NLog"]
         provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
 
         debug {
-            #receive = on
-            #autoreceive = on
-            #lifecycle = on
-            #event-stream = on
+            receive = on
+            autoreceive = on
+            lifecycle = on
+            event-stream = on
             unhandled = on
         }
     }
-
     remote {
     maximum-payload-bytes = 30000000 bytes
               #log-remote-lifecycle-events = DEBUG
