Controling servervice from client ui

--- a/InventoryService.WebUI/InventoryService.WebUI.csproj
+++ b/InventoryService.WebUI/InventoryService.WebUI.csproj
@@ -71,6 +71,9 @@
     <Content Include="web\js\script.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="web\js\smoothie.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <Content Include="web\vendor\bootstrap\css\bootstrap.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
