--- a/InventoryService.WebUIDeployment/App.config
+++ b/InventoryService.WebUIDeployment/App.config
@@ -9,7 +9,8 @@
     <add key="ServerEndPoint" value="http://*:10080/" />
     <add key="EsentStoragePath" value="../" />
     <add key="ServerActorSystemName" value="InventoryServiceUI-Server" />
-    <add key="RemoteInventoryActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor/NotificationsActor" />
+    <add key="RemoteInventoryNotificationsActorAddress" value="akka.tcp://InventoryService-Server@localhost/user/InventoryActor/NotificationsActor" />
+    <add key="RemoteInventoryActorAddress" value="akka.tcp://InventoryService-Server@localhost/user/InventoryActor" />
   </appSettings>
   <connectionStrings>
   </connectionStrings>
