fix performance issues , Add wire

--- a/InventoryService.Console/App.config
+++ b/InventoryService.Console/App.config
@@ -13,7 +13,13 @@
       <![CDATA[
 akka {
     actor {
-
+        serializers {
+							    wire = "Akka.Serialization.WireSerializer, Akka.Serialization.Wire"
+							}  
+                  
+							serialization-bindings {
+							    "System.Object" = wire
+							}
         provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
 
         debug {
