--- a/InventoryService.ServiceDeployment/App.config
+++ b/InventoryService.ServiceDeployment/App.config
@@ -21,30 +21,41 @@
 }
 akka {
     #stdout-loglevel = DEBUG
-    loglevel = DEBUG
+      #loglevel = DEBUG
     log-config-on-start = on
     actor {
-        loggers = ["Akka.Logger.NLog.NLogLogger, Akka.Logger.NLog"]
+    serializers {
+							    wire = "Akka.Serialization.WireSerializer, Akka.Serialization.Wire"
+							}  
+                  
+							serialization-bindings {
+							    "System.Object" = wire
+							}
+        #loggers = ["Akka.Logger.NLog.NLogLogger, Akka.Logger.NLog"]
         provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
 
         debug {
-            receive = on
-            autoreceive = on
-            lifecycle = on
-            event-stream = on
-            unhandled = on
+              #receive = on
+              #autoreceive = on
+              #lifecycle = on
+              #event-stream = on
+              #unhandled = on
         }
     }
     remote {
-              log-remote-lifecycle-events = DEBUG
-              log-received-messages = on
-              log-sent-messages = on
+                #log-remote-lifecycle-events = DEBUG
+                #log-received-messages = on
+                #log-sent-messages = on
                 helios.tcp {
                     port = 10000
                     hostname = localhost
-                    log-remote-lifecycle-events = DEBUG
-                    log-received-messages = on
-                    log-sent-messages = on
+                      #log-remote-lifecycle-events = DEBUG
+                      #log-received-messages = on
+                      #log-sent-messages = on
+                    message-frame-size =  30000000b
+                    send-buffer-size =  30000000b
+                    receive-buffer-size =  30000000b
+                   maximum-frame-size = 30000000b
                 }
             }
 }
