--- a/InventoryService.WebUIDeployment/App.config
+++ b/InventoryService.WebUIDeployment/App.config
@@ -17,7 +17,7 @@
   <akka>
     <hocon>
       <![CDATA[
-      
+
       GetAllInventoryListMailbox {
     mailbox-type : "InventoryService.ActorMailBoxes.GetAllInventoryListMailbox, InventoryService.ActorMailBoxes"
 }
@@ -26,6 +26,13 @@ akka {
     loglevel = DEBUG
     log-config-on-start = on
     actor {
+    serializers {
+							    wire = "Akka.Serialization.WireSerializer, Akka.Serialization.Wire"
+							}
+
+							serialization-bindings {
+							    "System.Object" = wire
+							}
         loggers = ["Akka.Logger.NLog.NLogLogger, Akka.Logger.NLog"]
         provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
 
