--- a/InventoryService.WebUIDeployment/packages.config
+++ b/InventoryService.WebUIDeployment/packages.config
@@ -4,6 +4,7 @@
   <package id="Akka.Cluster" version="1.1.2" targetFramework="net452" />
   <package id="Akka.Logger.NLog" version="1.1.2" targetFramework="net452" />
   <package id="Akka.Remote" version="1.1.2" targetFramework="net452" />
+  <package id="Akka.Serialization.Wire" version="1.1.2.30-beta" targetFramework="net452" />
   <package id="Autofac" version="4.2.0" targetFramework="net452" />
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net452" />
   <package id="Autofac.SignalR" version="3.0.2" targetFramework="net452" />
@@ -30,4 +31,5 @@
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
   <package id="Topshelf" version="4.0.3" targetFramework="net452" />
   <package id="Topshelf.NLog" version="4.0.3" targetFramework="net452" />
+  <package id="Wire" version="0.7.1" targetFramework="net452" />
 </packages>
