--- a/InventoryService.ServiceClientDeployment/App.config
+++ b/InventoryService.ServiceClientDeployment/App.config
@@ -15,6 +15,13 @@ akka {
     loglevel = DEBUG
     log-config-on-start = on
     actor {
+    serializers {
+							    wire = "Akka.Serialization.WireSerializer, Akka.Serialization.Wire"
+							}  
+                  
+							serialization-bindings {
+							    "System.Object" = wire
+							}
         loggers = ["Akka.Logger.NLog.NLogLogger, Akka.Logger.NLog"]
         provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
 
