--- a/InventoryService.Tests/app.config
+++ b/InventoryService.Tests/app.config
@@ -5,6 +5,7 @@
   </configSections>
   <appSettings>
     <add key="Storage" value="InventoryService.Storage.InMemoryLib.InMemory, InventoryService.Storage.InMemoryLib" />
+    <add key="RemoteInventoryNotificationsActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor/NotificationsActor" />
     <add key="RemoteInventoryActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
     <!--<add key="ServerEndPoint" value="http://*:10086/" />-->
     <add key="ServerActorSystemName" value="InventoryService-Server" />
@@ -12,17 +13,46 @@
   <akka>
     <hocon>
       <![CDATA[
-        akka {
-
+         GetAllInventoryListMailbox {
+    mailbox-type : "InventoryService.ActorMailBoxes.GetAllInventoryListMailbox, InventoryService.ActorMailBoxes"
+}
+akka {
+    #stdout-loglevel = DEBUG
+      #loglevel = DEBUG
+    log-config-on-start = on
     actor {
-
+    serializers {
+							    wire = "Akka.Serialization.WireSerializer, Akka.Serialization.Wire"
+							}  
+                  
+							serialization-bindings {
+							    "System.Object" = wire
+							}
+        #loggers = ["Akka.Logger.NLog.NLogLogger, Akka.Logger.NLog"]
         provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
-    }
 
+        debug {
+              #receive = on
+              #autoreceive = on
+              #lifecycle = on
+              #event-stream = on
+              #unhandled = on
+        }
+    }
     remote {
+                #log-remote-lifecycle-events = DEBUG
+                #log-received-messages = on
+                #log-sent-messages = on
                 helios.tcp {
                     port = 10000
-                    hostname =localhost
+                    hostname = localhost
+                      #log-remote-lifecycle-events = DEBUG
+                      #log-received-messages = on
+                      #log-sent-messages = on
+                    message-frame-size =  30000000b
+                    send-buffer-size =  30000000b
+                    receive-buffer-size =  30000000b
+                   maximum-frame-size = 30000000b
                 }
             }
 }
