--- a/InventoryService.Tests/packages.config
+++ b/InventoryService.Tests/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Akka" version="1.1.2" targetFramework="net452" />
+  <package id="Akka.Cluster" version="1.1.2" targetFramework="net452" />
   <package id="Akka.Remote" version="1.1.2" targetFramework="net452" />
+  <package id="Akka.Serialization.Wire" version="1.1.2.30-beta" targetFramework="net452" />
   <package id="Akka.TestKit" version="1.1.2" targetFramework="net452" />
   <package id="Akka.TestKit.Xunit2" version="1.1.2" targetFramework="net452" />
   <package id="FsCheck" version="2.6.2" targetFramework="net452" />
@@ -21,6 +23,7 @@
   <package id="NuGet.CommandLine" version="3.3.0" targetFramework="net452" developmentDependency="true" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net45" />
+  <package id="Wire" version="0.7.1" targetFramework="net452" />
   <package id="xunit" version="2.2.0-beta3-build3402" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net452" />
   <package id="xunit.assert" version="2.2.0-beta3-build3402" targetFramework="net452" />
