Fix service hosting in tests

--- a/InventoryService.Tests/app.config
+++ b/InventoryService.Tests/app.config
@@ -7,7 +7,7 @@
     <add key="Storage" value="InventoryService.Storage.InMemoryLib.InMemory, InventoryService.Storage.InMemoryLib" />
     <add key="RemoteInventoryNotificationsActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor/NotificationsActor" />
     <add key="RemoteInventoryActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
-    <!--<add key="ServerEndPoint" value="http://*:10086/" />-->
+    <add key="ServerEndPoint" value="http://*:10086/" />
     <add key="ServerActorSystemName" value="InventoryService-Server" />
   </appSettings>
   <akka>
@@ -17,9 +17,7 @@
     mailbox-type : "InventoryService.ActorMailBoxes.GetAllInventoryListMailbox, InventoryService.ActorMailBoxes"
 }
 akka {
-    #stdout-loglevel = DEBUG
-      #loglevel = DEBUG
-    log-config-on-start = on
+  
     actor {
     serializers {
 							    wire = "Akka.Serialization.WireSerializer, Akka.Serialization.Wire"
@@ -28,27 +26,14 @@ akka {
 							serialization-bindings {
 							    "System.Object" = wire
 							}
-        #loggers = ["Akka.Logger.NLog.NLogLogger, Akka.Logger.NLog"]
-        provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
-
-        debug {
-              #receive = on
-              #autoreceive = on
-              #lifecycle = on
-              #event-stream = on
-              #unhandled = on
-        }
+       
+        provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"        
     }
     remote {
-                #log-remote-lifecycle-events = DEBUG
-                #log-received-messages = on
-                #log-sent-messages = on
+                
                 helios.tcp {
                     port = 10000
-                    hostname = localhost
-                      #log-remote-lifecycle-events = DEBUG
-                      #log-received-messages = on
-                      #log-sent-messages = on
+                    hostname = localhost                    
                     message-frame-size =  30000000b
                     send-buffer-size =  30000000b
                     receive-buffer-size =  30000000b
@@ -84,6 +69,10 @@ akka {
       <dependentAssembly>
         <assemblyIdentity name="xunit.execution.desktop" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.2.0.3402" newVersion="2.2.0.3402" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
