--- a/InventoryService.Tests/packages.config
+++ b/InventoryService.Tests/packages.config
@@ -11,14 +11,21 @@
   <package id="FSharp.Core" version="4.0.1.7-alpha" targetFramework="net452" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
   <package id="Helios" version="2.1.2" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.SelfHost" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NuGet.CommandLine" version="3.3.0" targetFramework="net452" developmentDependency="true" />
   <package id="Owin" version="1.0" targetFramework="net452" />
