--- a/InventoryService.Actors/InventoryService.Actors.csproj
+++ b/InventoryService.Actors/InventoryService.Actors.csproj
@@ -74,6 +74,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
