--- a/InventoryService.Actors/InventoryService.Actors.csproj
+++ b/InventoryService.Actors/InventoryService.Actors.csproj
@@ -86,6 +86,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GetMetrics.cs" />
     <Compile Include="InventoryActor.cs" />
     <Compile Include="InventoryServicePingActor.cs" />
     <Compile Include="ListOfTExtentions.cs" />
