--- a/InventoryService/InventoryService.csproj
+++ b/InventoryService/InventoryService.csproj
@@ -58,12 +58,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsolePerformanceService.cs" />
     <Compile Include="IPerformanceService.cs" />
     <Compile Include="OperationResult.cs" />
     <Compile Include="ProductInventoryOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RealTimeInventoryFinalResult.cs" />
     <Compile Include="RealTimeInventoryOPerationalResultExtensions.cs" />
+    <Compile Include="TestPerformanceService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
